syntax = "proto3";

package banked.payment.v1;

import "banked/v1/amount.proto";
import "google/protobuf/timestamp.proto";
import "validate/validate.proto";

message ErrInsuffcientFunds {
  string payment_id = 1 [(validate.rules).string.uuid = true];

  banked.v1.Amount amount = 2;

  string provider = 3;

  google.protobuf.Timestamp attempted_at = 4;

  string foo = 5;
}
